src/objects/PowerEditorUsage__c.object
<CustomObject>
    <description>Please dont create or edit these.  This is done by the system when users use PowerEditor.
No FLS on this object because this object is written to by Apex.</description>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <label>ObjectAPI_dot_FieldAPI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasoning255__c</fullName>
        <description>This is optionally captured in PowerEditor between each save or use of PowerEditor.</description>
        <inlineHelpText>This is optionally captured in PowerEditor between each save or use of PowerEditor.</inlineHelpText>
        <label>Reasoning255</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordID18__c</fullName>
        <label>RecordID18</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PowerEditorUsage</label>
    <nameField>
        <displayFormat>PEU-{0000}</displayFormat>
        <label>PowerEditorUsage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PowerEditorUsages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>